--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,4 +20,4 @@ spring.datasource.dbcp2.validation-query=SELECT x
 spring.datasource.dbcp2.connection-properties=characterEncoding=utf8
 
 ##mybitis
-mybatis.mapperLocations=classpath:mapper/*/*.xml
+mybatis.mapperLocations=classpath:mapper/*/*/*.xml
