--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,3 +21,5 @@ spring.datasource.dbcp2.connection-properties=characterEncoding=utf8
 
 ##mybitis
 mybatis.mapperLocations=classpath:mapper/*/*/*.xml
+
+mybatis.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
