--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,3 +23,6 @@ spring.datasource.dbcp2.connection-properties=characterEncoding=utf8
 mybatis.mapperLocations=classpath:mapper/*/*/*.xml
 
 mybatis.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
+
+security.oauth2.resource.user-info-uri=http://localhost:6170/user
+
